Remove style testing script for overflow issue and rename CSS folder to fix style loading issues

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -9,10 +9,6 @@ h2 {
   outline: 1px solid red;
 }
 
-#testing {
-  overflow: hidden;
-}
-
 #services .container,
 #booking .container-fluid {
   padding-left: 15px !important;
